@startuml


class PlayDeskConfig {
    + total_energy: float
    + energy_per_food
    + rows: int
    + columns: int
}

class AmebaConfig {
    + neural_network_hidden_layers: int
    + neurons_on_layer: int
    + neurons_qnt_add: function
    + threhold_of_lostness_weight_coefficient: float
    + visible_rows: int
    + visible_columns: int
    + initial_energy: float
    + energy_lost_per_move: function
}

class GameConfig {
    + play_desk: PlayDeskConfig
    + ameba: AmebaConfig

}

GameConfig --> PlayDeskConfig : contains
GameConfig --> AmebaConfig : contains


class PlayDesk {
    + amebas: list[Ameba]
    + config: PlayDeskConfig
    - foods: list[Foods]
    + generate_food()
    + get_total_energy(): float
    + get_visible_area(position: Position): list[Position], list[Ameba]
    + __init__(config: PlayDeskConfig)
}


class NeuronConnection {
    to_neuron: Neuron
    weight: float
}


class Neuron {
    id: int
    connections: NeuronConnection[]
}


Neuron --> NeuronConnection : contains


class NeuralNetwork {
    neuron: Neuron[]
}

NeuralNetwork --> Neuron : contains


class Position {
    row: int
    column: int
    adjust_position(rows: int, columns: int)}

class AmebaHistory {
    step: int
    position: Position
    energy: float
    visible_food_positions: list
    visible_ameba_positions: list
}


class Food {
    + position: Position
    + energy: float
}

class Ameba {
    + position: Position
    + energy: float
    + neural_network: NeuralNetwork
    - history: list
    + __init__(config: AmebaConfig)
    + move()
    + check_and_divide() : Ameba, Ameba
    - eat_and_adjust_neural_network()
    - populate_history()
}

Ameba --> AmebaHistory : contains
Ameba --> NeuralNetwork : contains
Ameba <-- PlayDesk : contains
Food <-- PlayDesk : contains


class Game {
    + {static} load_config() : GameConfig
    + play_desk: PlayDesk
    + __init__(config: GameConfig)
    + create_first_ameba() : Ameba
    + run()
    + do_one_step()
    + get_info()
}

Game --> PlayDesk : contains
Game --> GameConfig : contains


@enduml